--- a/_includes/content/tutorial.html
+++ b/_includes/content/tutorial.html
@@ -165,20 +165,13 @@
 </p>
 
 <p class="one_line_heading">
-    A list appears in this cell. Copy the <b>resulting</b> list with 
+    A list appears in this cell. Copy the <b>resulting list</b> with 
     &lt;Shift&gt; + &lt;Ctrl&gt; + C.
-    (Do not use the &lt;Ctrl&gt; + C command because this would copy the code rather than the
-    result the the Clipboard.) 
-    Then move the cursor to cell (1,0,2) and press &lt;Shift&gt; + &lt;Ctrl&gt; + V.
-    A dialog opens. Set 1 as object dimension.
-    If 0 is set then the list object is considered as a siongle item and not spread across cells.
-    Do not check transpose so that the pasting is done top down.
-    Next delete cell (0,0,0).
-</p>
-
-<p class="one_line_heading">
-    Note: The old "spread" method has been removed because of cell update
-    problems.
+    (Make sure that you do not use the &lt;Ctrl&gt; + C command.
+    This would copy the code, which results in an error message in the next step.)
+    Move the cursor to cell (1,0,2) and press &lt;Shift&gt; + &lt;Ctrl&gt; + V.
+    A dialog opens. Set 1 as object dimension. Do not check transpose. Press Ok.
+    The cells are filled again. Finally, delete cell (0,0,0).
 </p>
 
 
