Typo in tutorial fixed

--- a/_includes/content/tutorial.html
+++ b/_includes/content/tutorial.html
@@ -290,7 +290,7 @@
     object S inside the chart dialog window.
 
 <p class="one_line_heading">
-    Swith to table 3.<br>
+    Switch to table 3.<br>
     Type into cell (0,0,3):
     <pre>
         math=__import__("math")
