First steps file unified in Web page

--- a/_includes/content/docs.html
+++ b/_includes/content/docs.html
@@ -26,7 +26,7 @@
 <h1>User manual</h1>
 
 <p class="one_line_heading">
-  <a href="First%20steps.html">First steps into pyspread.</a>
+  <a href="first_steps.html">First steps into pyspread.</a>
 </p>
 
 
@@ -43,5 +43,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 28. December  2014</span>
+  Last changed: 20. January 2014</span>
 </p>
