Web site title fixed

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,6 +49,13 @@
         padding-right:120px;
     }
 
+    h0.title {
+        font-size:28pt;
+        font-weight: bold;
+        left:0px;
+        text-transform: lowercase;
+    }
+
     ul, ol {
         text-align:justify;
         position: relative;
