First steps layout fix

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,7 +42,7 @@
         text-decoration: none;
     }
 
-    p, h0, h2, h3, table, pre, code {
+    p, h0, h2, h3, table, pre {
         text-align:justify;
         position: relative;
         left:120px;
@@ -64,7 +64,7 @@
     }
 
     h2, h3, pre, p.one_line_heading, ul.one_line_heading, ol.one_line_heading,
-    table.one_line_heading, code {
+    table.one_line_heading {
         top:-2.1em;
     }
 
