Stylesheet adapted for first steps document

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
         background-color:#ffffff;
     }
 
-    h1, h2, h3, p, ul, ol {
+    h1, h2, h3, h4, p, ul, ol {
         font-size:12pt;
         margin-right: 220px;
     }
@@ -63,7 +63,7 @@
         padding-right:100px;
     }
 
-    h2, h3, pre, p.one_line_heading, ul.one_line_heading, ol.one_line_heading,
+    h2, h3,, h4, pre, p.one_line_heading, ul.one_line_heading, ol.one_line_heading,
     table.one_line_heading {
         top:-2.1em;
     }
@@ -86,7 +86,7 @@
         font-size: 1em;
         font-weight: bold;
     }
-    h3 {
+    h3, h4 {
         font-family: Arial,Helvetica,sans-serif;
         font-weight: bold;
         font-style: normal;
