Further fix for first steps

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,7 +42,7 @@
         text-decoration: none;
     }
 
-    p, h0, h2, h3, table, pre {
+    p, h0, h2, h3, h4, table, pre {
         text-align:justify;
         position: relative;
         left:120px;
