Fix for 1st steps

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -63,7 +63,7 @@
         padding-right:100px;
     }
 
-    h2, h3,, h4, pre, p.one_line_heading, ul.one_line_heading, ol.one_line_heading,
+    h2, h3, h4, pre, p.one_line_heading, ul.one_line_heading, ol.one_line_heading,
     table.one_line_heading {
         top:-2.1em;
     }
@@ -93,6 +93,10 @@
         text-transform: none;
         text-align: left;
         font-size: 1em;
+    }
+    h4 {
+        font-weight: normal;
+        font-style: italics;
     }
 
     th {
