--- a/_includes/head.html
+++ b/_includes/head.html
@@ -96,7 +96,7 @@
     }
     h4 {
         font-weight: normal;
-        text-decoration: underline;
+        font-style: italic;
     }
 
     th {
