--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -730,7 +730,7 @@
     safe mode if
 </p>
 
-<ul>
+<ul class="one_line_heading">
     <li>it has not been previously signed by the
         current user on the current system or</li>
     <li>gnupg is not installed or not configured to use a key
