--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -1136,8 +1136,10 @@
 
 <h4>Redo</h4>
 
+<p class="one_line_heading">
     Undone steps can be redone with Edit -&gt; Redo
     (Shortcut: &lt;Shift&gt; + &lt;Ctrl&gt; + Z).
+</p>
 
 <h4>Cut</h4>
 
@@ -1697,12 +1699,13 @@
     (Figure). The editor allows editing a text file that is
     executed when the spreadsheet is opened or when its
     content is updated.
-</p>
 
-<a href="images/screenshot_macros.png">
-        <img alt="Macro editor" src="images/screenshot_macros_preview.png"
-             style="border: 0px solid ; width: 200px; height: 156px;">
-</a>
+    <a href="images/screenshot_macros.png">
+            <img alt="Macro editor" src="images/screenshot_macros_preview.png"
+                 style="border: 0px solid ; width: 200px; height: 156px;">
+    </a>
+
+</p>
 
 <p class="one_line_heading">
     The Apply button executes the macro code.
@@ -1839,11 +1842,11 @@
 </p>
 
 <h4>About</h4>
+
+<p class="one_line_heading">
     Help -&gt; About informs about pyspread's current version, license
     and contributors. The exact layout depends on the oprtation
-    system.
-<p class="one_line_heading">
-    
+    system.    
 </p>
 
 <h2>Context menu</h2>
@@ -2490,11 +2493,7 @@
 
 <p class="one_line_heading">
     One solution to this issue is to generate an SVG image
-    from each chart and insert it into the spreadsheet.
-</p>
-
-<p class="one_line_heading">
-    <br> <br>
+    from each chart and insert it into the spreadsheet. <br>
 </p>
 
 <p class="impressum">
