Issue #116: Hyperlink to github added to main page.

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -40,6 +40,8 @@
 <p class="one_line_heading">
   Pyspread is free software. It is released under the
 <a href="http://www.gnu.org/copyleft/gpl.html">GPL v3</a>.
+  You can find the sorce code at 
+<a href="https://github.com/manns/pyspread">github</a>.
 </p>
 
 <h1>Features</h1>
