File link in first steps document updated to v0.4.1

--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -108,8 +108,8 @@
 
   These instructions are for installing the source tarball
   <br>
-  <a href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.tar.gz#md5=6188e2c4c2ed9c58add7f26b70b7e05d">pyspread v0.4</a>
-  (<a href="https://manns.github.io/pyspread/releases/pyspread-0.4.tar.gz.sig">gpg sig</a>).
+  <a href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.1.tar.gz#md5=81e02432797cc663acb5473c44b80ccc">pyspread v0.4</a>
+  (<a href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.1.tar.gz.asc">gpg sig</a>).
   <br> <br>
   Installation:
   <br>
