Package versions in Linux distributions updated

--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -167,7 +167,7 @@
           align="middle"></td>
       <td style="text-align: left;">Debian</td>
       <td><a
-          href="https://packages.debian.org/de/sid/pyspread">pyspread v0.4.1</a></td>
+          href="https://packages.debian.org/de/sid/pyspread">pyspread v0.4.3</a></td>
     </tr>
     <tr>
       <td style="text-align: center;"><img style=" width:
@@ -184,7 +184,7 @@
       </td>
       <td style="text-align: left;">Slackware</td>
       <td><a
-          href="http://slackbuilds.org/repository/14.1/office/pyspread/">pyspread v0.4.1</a></td>
+          href="http://slackbuilds.org/repository/14.1/office/pyspread/">pyspread v0.4.3</a></td>
     </tr>
     <tr>
       <td style="vertical-align: top; text-align: center;"><img
@@ -193,7 +193,7 @@
           align="middle"></td>
       <td style="vertical-align: top;">Ubuntu</td>
       <td style="vertical-align: top;"><a
-          href="http://packages.ubuntu.com/de/vivid/pyspread">pyspread v0.3.3</a></td>
+          href="http://packages.ubuntu.com/wily/python/pyspread">pyspread v0.4.3</a></td>
     </tr>
   </tbody>
 </table>
@@ -2518,5 +2518,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 31. May 2015</span>
+  Last changed: 28. June 2015</span>
 </p>
