Features updated on Main Web page

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -40,7 +40,7 @@
 <p class="one_line_heading">
   Pyspread is free software. It is released under the
 <a href="http://www.gnu.org/copyleft/gpl.html">GPL v3</a>.
-  You can find the sorce code at 
+  You can find the sorce code at
 <a href="https://github.com/manns/pyspread">github</a>.
 </p>
 
@@ -48,16 +48,23 @@
 
 <ul class="one_line_heading">
   <li>CSV import and export</li>
+  <li>XLS import and export as well as XLSX import via <a
+      href="http://http://www.python-excel.org/">xlrd/xlwt</a></li>
+  <li>PDF and SVG export via <a
+      href="http://cairographics.org/pycairo/">Pycairo</a></li>
   <li>Chart creation dialog based on <a
       href="http://matplotlib.org/"> matplotlib</a> </li>
   <li>Python objects as cell results</li>
   <li>Python macros</li>
+  <li>Code completion via <a
+      href="http://jedi.jedidjah.ch/en/latest/">jedi</a></li>
   <li>GPG based save file signatures for preventing foreign
-    code execution<br>
+    code execution via <a
+      href="https://pythonhosted.org/python-gnupg/">gnupg</a><br>
   </li>
   <li>Access to all Python modules from within cells. These
     modules allow for example matrix operations via <a
-      href="http://www.numpy.org/"> numpy</a> or fixed point
+      href="http://www.numpy.org/">numpy</a> or fixed point
     decimal numbers for business calculations via <a
       href="http://docs.python.org/library/decimal.html">
       decimal</a>.
@@ -128,5 +135,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 24. April 2015</span>
+  Last changed: 8. September 2015</span>
 </p>
