Wrong url corrected, https image tryout

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -1,8 +1,8 @@
 <aside>
   <br> <br>
-  <a href="images/screenshot_main_window.png">
+  <a href="https://images/screenshot_main_window.png">
     <img alt="Pyspread main window"
-         src="images/screenshot_main_window_preview.png"
+         src="https://images/screenshot_main_window_preview.png"
          style="border: 0px solid ; width: 200px; height: 166px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
@@ -49,7 +49,7 @@
 <ul class="one_line_heading">
   <li>CSV import and export</li>
   <li>XLS import and export as well as XLSX import via <a
-      href="http://http://www.python-excel.org/">xlrd/xlwt</a></li>
+      href="http://www.python-excel.org/">xlrd/xlwt</a></li>
   <li>PDF and SVG export via <a
       href="http://cairographics.org/pycairo/">Pycairo</a></li>
   <li>Chart creation dialog based on <a
