--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -1,26 +1,26 @@
 <aside>
   <br> <br>
-  <a href="images/screenshot_presentation_large.png">
+  <a href="https://images/screenshot_presentation_large.png">
     <img alt="Pyspread with presentation example"
-         src="images/screenshot_presentation_thumb.png"
+         src="https://images/screenshot_presentation_thumb.png"
          style="border: 0px solid ; width: 200px; height: 164px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-  <a href="images/screenshot_wagner_large.png">
+  <a href="https://images/screenshot_wagner_large.png">
     <img alt="Pyspread with the Wagner Whitin algorithm"
-         src="images/screenshot_wagner_thumb.png"
+         src="https://images/screenshot_wagner_thumb.png"
          style="border: 0px solid ; width: 200px; height: 157px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-  <a href="images/screenshot_apt_large.png">
+  <a href="https://images/screenshot_apt_large.png">
     <img alt="Pyspread with an apt package analysis"
-         src="images/screenshot_apt_thumb.png"
+         src="https://images/screenshot_apt_thumb.png"
          style="border: 0px solid ; width: 200px; height: 164px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-  <a href="images/screenshot_jedi_large.png">
+  <a href="https://images/screenshot_jedi_large.png">
     <img alt="Pyspread with code completion"
-         src="images/screenshot_jedi_thumb.png"
+         src="https://images/screenshot_jedi_thumb.png"
          style="border: 0px solid ; width: 200px; height: 164px;">
   </a>
   <br>
@@ -234,5 +234,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 28. June 2015</span>
+  Last changed: 8. September 2015</span>
 </p>
