--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -6,15 +6,15 @@
          style="border: 0px solid ; width: 200px; height: 166px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-  <a href="images/screenshot_sinus_large.png">
+  <a href="https://images/screenshot_sinus_large.png">
     <img alt="Pyspread screenshot"
-         src="images/screenshot_sinus_thumb.png"
+         src="https://images/screenshot_sinus_thumb.png"
          style="border: 0px solid ; width: 200px; height: 162px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-  <a href="images/screenshot_basemap_large.png">
+  <a href="https://images/screenshot_basemap_large.png">
     <img alt="Pyspread screenshot"
-         src="images/screenshot_basemap_thumb.png"
+         src="https://images/screenshot_basemap_thumb.png"
          style="border: 0px solid ; width: 200px; height: 141px;">
   </a>
 
