--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -123,7 +123,7 @@
     <tr>
       <td style="text-align: center;"><img style=" width:
           24px; height: 24px;" alt="Arch logo"
-          src="http://manns.github.io/pyspread/images/arch-logo-small.png"
+          src="https://manns.github.io/pyspread/images/arch-logo-small.png"
           align="middle"><br>
       </td>
       <td style="text-align: left;">Arch</td>
@@ -134,7 +134,7 @@
     <tr>
       <td style="text-align: center;"><img style=" width:
           20px; height: 24px;" alt="Debian logo"
-          src="http://manns.github.io/pyspread/images/debian-logo-small.png"
+          src="https://manns.github.io/pyspread/images/debian-logo-small.png"
           align="middle"></td>
       <td style="text-align: left;">Debian</td>
       <td><a
@@ -143,7 +143,7 @@
     <tr>
       <td style="text-align: center;"><img style=" width:
           23px; height: 24px;" alt="Mageia logo"
-          src="http://manns.github.io/pyspread/images/mageia-logo-small.png"
+          src="https://manns.github.io/pyspread/images/mageia-logo-small.png"
           align="middle"></td>
       <td style=" text-align: left;">Mageia</td>
       <td><a href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/com/pyspread-0.3.3-3.mga5.x86_64.rpm.html">pyspread v0.3.3</a></td>
@@ -151,11 +151,11 @@
     <tr>
       <td style="text-align: center;"><img style=" width:
           24px; height: 24px;" alt="Slackware logo"
-          src="http://manns.github.io/pyspread/images/slackware-logo-small.png"><br>
+          src="https://manns.github.io/pyspread/images/slackware-logo-small.png"><br>
       </td>
       <td style="text-align: left;">Slackware</td>
       <td><a
-          href="http://slackbuilds.org/repository/14.1/office/pyspread/">pyspread v0.4.3</a></td>
+          href="https://slackbuilds.org/repository/14.1/office/pyspread/">pyspread v0.4.3</a></td>
     </tr>
     <tr>
       <td style="vertical-align: top; text-align: center;"><img
@@ -164,7 +164,7 @@
           align="middle"></td>
       <td style="vertical-align: top;">Ubuntu</td>
       <td style="vertical-align: top;"><a
-          href="http://packages.ubuntu.com/wily/python/pyspread">pyspread v0.4.3</a></td>
+          href="https://packages.ubuntu.com/wily/python/pyspread">pyspread v0.4.3</a></td>
     </tr>
   </tbody>
 </table>
