Non-working https links removed

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -1,24 +1,24 @@
 <aside>
   <br> <br>
-  <a href="https://images/screenshot_presentation_large.png">
+  <a href="images/screenshot_presentation_large.png">
     <img alt="Pyspread with presentation example"
          src="https://images/screenshot_presentation_thumb.png"
          style="border: 0px solid ; width: 200px; height: 164px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-  <a href="https://images/screenshot_wagner_large.png">
+  <a href="images/screenshot_wagner_large.png">
     <img alt="Pyspread with the Wagner Whitin algorithm"
          src="https://images/screenshot_wagner_thumb.png"
          style="border: 0px solid ; width: 200px; height: 157px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-  <a href="https://images/screenshot_apt_large.png">
+  <a href="images/screenshot_apt_large.png">
     <img alt="Pyspread with an apt package analysis"
          src="https://images/screenshot_apt_thumb.png"
          style="border: 0px solid ; width: 200px; height: 164px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-  <a href="https://images/screenshot_jedi_large.png">
+  <a href="images/screenshot_jedi_large.png">
     <img alt="Pyspread with code completion"
          src="https://images/screenshot_jedi_thumb.png"
          style="border: 0px solid ; width: 200px; height: 164px;">
@@ -159,8 +159,7 @@
     </tr>
     <tr>
       <td style="vertical-align: top; text-align: center;"><img
-          style=" width: 24px; height: 24px;" alt="Ubuntu
-          logo" src="http://manns.github.io/pyspread/images/ubuntu-logo-small.png"
+          style=" width: 24px; height: 24px;" alt="Ubuntu logo" src="https://manns.github.io/pyspread/images/ubuntu-logo-small.png"
           align="middle"></td>
       <td style="vertical-align: top;">Ubuntu</td>
       <td style="vertical-align: top;"><a
