--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -1,18 +1,18 @@
 <aside>
   <br> <br>
-  <a href="https://images/screenshot_main_window.png">
+  <a href="images/screenshot_main_window.png">
     <img alt="Pyspread main window"
          src="https://images/screenshot_main_window_preview.png"
          style="border: 0px solid ; width: 200px; height: 166px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-  <a href="https://images/screenshot_sinus_large.png">
+  <a href="images/screenshot_sinus_large.png">
     <img alt="Pyspread screenshot"
          src="https://images/screenshot_sinus_thumb.png"
          style="border: 0px solid ; width: 200px; height: 162px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-  <a href="https://images/screenshot_basemap_large.png">
+  <a href="images/screenshot_basemap_large.png">
     <img alt="Pyspread screenshot"
          src="https://images/screenshot_basemap_thumb.png"
          style="border: 0px solid ; width: 200px; height: 141px;">
