--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -8,19 +8,19 @@
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
   <a href="images/screenshot_wagner_large.png">
     <img alt="Pyspread with the Wagner Whitin algorithm"
-         src="https://images/screenshot_wagner_thumb.png"
+         src="images/screenshot_wagner_thumb.png"
          style="border: 0px solid ; width: 200px; height: 157px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
   <a href="images/screenshot_apt_large.png">
     <img alt="Pyspread with an apt package analysis"
-         src="https://images/screenshot_apt_thumb.png"
+         src="images/screenshot_apt_thumb.png"
          style="border: 0px solid ; width: 200px; height: 164px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
   <a href="images/screenshot_jedi_large.png">
     <img alt="Pyspread with code completion"
-         src="https://images/screenshot_jedi_thumb.png"
+         src="images/screenshot_jedi_thumb.png"
          style="border: 0px solid ; width: 200px; height: 164px;">
   </a>
   <br>
