--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -2,7 +2,7 @@
   <br> <br>
   <a href="images/screenshot_presentation_large.png">
     <img alt="Pyspread with presentation example"
-         src="https://images/screenshot_presentation_thumb.png"
+         src="images/screenshot_presentation_thumb.png"
          style="border: 0px solid ; width: 200px; height: 164px;">
   </a>
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
