lang moved to right location

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <title>Pyspread - {{page.title}}</title>
-<meta http-equiv="Content-Type" content="text/html; lang=en; charset=UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="Author" content="Martin Manns">
 <meta name="description" content="Pyspread is a non-traditional spreadsheet application.">
 <meta name="keywords" content="pyspread, spreadsheet, python, python
