Main page simplified

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -48,20 +48,14 @@
 
 <ul class="one_line_heading">
   <li>CSV import and export</li>
-  <li>XLS import and export as well as XLSX import via <a
-      href="http://www.python-excel.org/">xlrd/xlwt</a></li>
-  <li>PDF and SVG export via <a
-      href="http://cairographics.org/pycairo/">Pycairo</a></li>
-  <li>Chart creation dialog based on <a
-      href="http://matplotlib.org/"> matplotlib</a> </li>
+  <li>XLS import and export, XLSX import*</li>
+  <li>PDF and SVG export*</li>
+  <li>Charts*</li>
   <li>Python objects as cell results</li>
   <li>Python macros</li>
-  <li>Code completion via <a
-      href="http://jedi.jedidjah.ch/en/latest/">jedi</a></li>
+  <li>Code completion*</li>
   <li>GPG based save file signatures for preventing foreign
-    code execution via <a
-      href="https://pythonhosted.org/python-gnupg/">gnupg</a><br>
-  </li>
+    code execution*</li>
   <li>Access to all Python modules from within cells. These
     modules allow for example matrix operations via <a
       href="http://www.numpy.org/">numpy</a> or fixed point
@@ -70,7 +64,9 @@
       decimal</a>.
   </li>
 </ul>
-
+<p class="one_line_heading">
+  <i>(* requires optional dependencies)</i>
+</p>
 
 <h1>Target group</h1>
 
