parentheses removed on Main page

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -65,7 +65,7 @@
   </li>
 </ul>
 <p class="one_line_heading">
-  <i>(* requires optional dependencies)</i>
+  <i>* requires optional dependencies</i>
 </p>
 
 <h1>Target group</h1>
