Main page simplified

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -50,12 +50,11 @@
   <li>CSV import and export</li>
   <li>XLS import and export, XLSX import*</li>
   <li>PDF and SVG export*</li>
-  <li>Charts*</li>
+  <li>Charts for visualizing data</li>
+  <li>Python code in cells and in macros</li>
   <li>Python objects as cell results</li>
-  <li>Python macros</li>
   <li>Code completion*</li>
-  <li>GPG based save file signatures for preventing foreign
-    code execution*</li>
+  <li>GPG based save file signatures that prevent foreign code execution*</li>
   <li>Access to all Python modules from within cells. These
     modules allow for example matrix operations via <a
       href="http://www.numpy.org/">numpy</a> or fixed point
