SVG import added to Main page

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -49,7 +49,8 @@
 <ul class="one_line_heading">
   <li>CSV import and export</li>
   <li>XLS import and export, XLSX import*</li>
-  <li>PDF and SVG export*</li>
+  <li>SVG import*</li>
+  <li>PDF and SVG export</li>
   <li>Charts for visualizing data</li>
   <li>Python code in cells and in macros</li>
   <li>Python objects as cell results</li>
