--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -79,8 +79,8 @@
 
   These instructions are for installing the source tarball
   <br>
-  <a href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.3.tar.gz#md5=37f33eb1d03c76cd86edc7d74356e528">pyspread v0.4.3</a>
-  (<a href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.3.tar.gz.asc">gpg sig</a>).
+  <a href="https://pypi.python.org/packages/source/p/pyspread/pyspread-1.0.tar.gz#md5=028b3d0cd1f83491a2ab981d808a858b">pyspread v1.0</a>
+  (<a href="https://pypi.python.org/packages/source/p/pyspread/pyspread-1.0.tar.gz.asc">gpg sig</a>).
   <br> <br>
   Installation:
   <br>
@@ -179,10 +179,18 @@
 
 <h1>Windows</h1>
 
-<p class="one_line_heading">
+<h2>Installer</h2>
 
-  For Windows, please follow these instructions. In order to make Windows
-  installation easier, links point to sites where both 32 bit and to 64 bit versions are provided.<br>
+<p class="one_line_heading">
+  Starting with version 1.0, a Windows installer is provided.
+  The latest version can be downloaded <a href="http://download.gna.org/pyspread/pyspread-1.0-win32-setup.exe">here</a> 
+  (<a href="http://download.gna.org/pyspread/pyspread-1.0-win32-setup.exe.sig">gpg</a>).
+
+<h2>Manual insatllation</h2>
+
+<p class="one_line_heading">
+  If you want to customize a Windows installation or if you require 64 bit then install pyspread manually.
+  Please follow these instructions. Links point at sites where both 32 bit and to 64 bit versions are provided.<br>
   <ol class="one_line_heading">
     <li>Download and install Python, numpy and matplotlib.
       You can find 32bit and 64bit packages of WinPython <a
@@ -233,5 +241,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 8. October 2015</span>
+  Last changed: 29. October 2015</span>
 </p>
