Download page fix

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -184,7 +184,7 @@
 <p class="one_line_heading">
   Starting with version 1.0, a Windows installer is provided.
   The latest version can be downloaded <a href="http://download.gna.org/pyspread/pyspread-1.0-win32-setup.exe">here</a> 
-  (<a href="http://download.gna.org/pyspread/pyspread-1.0-win32-setup.exe.sig">gpg</a>).
+  (120MB download, <a href="http://download.gna.org/pyspread/pyspread-1.0-win32-setup.exe.sig">gpg sig</a>).
 
 <h2>Manual insatllation</h2>
 
