--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -182,7 +182,7 @@
 <h2>Installer</h2>
 
 <p class="one_line_heading">
-  Starting with version 1.0, a Windows installer is provided.
+  Starting from version 1.0, a Windows 32 bit installer is available (Windows XP or later).
   The latest version can be downloaded <a href="http://download.gna.org/pyspread/pyspread-1.0-win32-setup.exe">here</a> 
   (120MB download, <a href="http://download.gna.org/pyspread/pyspread-1.0-win32-setup.exe.sig">gpg sig</a>).
 
