--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -89,7 +89,7 @@
 </ul>
 
 <p class="one_line_heading">
-  Not part of the target user group of Dolphin are Donna and Jack:
+  Not part of the target user group are Donna and Jack:
 </p>
 
 <ul class="one_line_heading">
@@ -131,5 +131,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 8. September 2015</span>
+  Last changed: 1. November 2015</span>
 </p>
