--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -47,19 +47,21 @@
 
 <ul class="one_line_heading">
   <li style="color: rgb(255, 0, 0);">Brazilian Portuguese (pt): 488 /
-    550 translated by Enrico Nicoletto</li>
-  <li style="color: rgb(255, 0, 0);">Danish (da): 466 / 550
+    551 translated by Enrico Nicoletto</li>
+  <li style="color: rgb(0, 153, 0);">Danish (da): 551 / 551
     translated by Joe Hansen</li>
-  <li style="color: rgb(255, 0, 0);">Dutch (nl): 101 / 550
+  <li style="color: rgb(255, 0, 0);">Dutch (nl): 101 / 551
     translated by Mark Haanen</li>
-  <li style="color: rgb(0, 153, 0);">German (de): 550 / 550
+  <li style="color: rgb(255, 0, 0);">French (fr): 466 / 551
+    translated by Frédéric Marchal</li>
+  <li style="color: rgb(255, 0, 0);">German (de): 550 / 551
     translated by Mario Blättermann, Martin Manns and Christian Kirbach</li>
   <li style="color: rgb(255, 0, 0);">Nowegian Bokmaal (nb): 240 /
-    550 translated by Andreas Noteng</li>
+    551 translated by Andreas Noteng</li>
   <li style="color: rgb(255, 0, 0);">Nowegian Nynorsk (nn): 501 /
-    550 translated by Andreas Noteng</li>
-  <li style="color: rgb(0, 153, 0);">Ukrainian (uk): 550 /
-    550 translated by Yuri Chornoivan</li>
+    551 translated by Andreas Noteng</li>
+  <li style="color: rgb(0, 153, 0);">Ukrainian (uk): 551 /
+    551 translated by Yuri Chornoivan</li>
 </ul>
 
 
@@ -235,5 +237,5 @@ Chart overview:
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 8. September 2015</span>
+  Last changed: 18. November 2015</span>
 </p>
