--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -138,7 +138,7 @@
           align="middle"></td>
       <td style="text-align: left;">Debian</td>
       <td><a
-          href="https://packages.debian.org/de/sid/pyspread">pyspread v0.4.3</a></td>
+          href="https://packages.debian.org/de/sid/pyspread">pyspread v1.0</a></td>
     </tr>
     <tr>
       <td style="text-align: center;"><img style=" width:
@@ -146,7 +146,7 @@
           src="https://manns.github.io/pyspread/images/mageia-logo-small.png"
           align="middle"></td>
       <td style=" text-align: left;">Mageia</td>
-      <td><a href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/com/pyspread-0.3.3-3.mga5.x86_64.rpm.html">pyspread v0.3.3</a></td>
+      <td><a href="http://rpm.pbone.net/index.php3/stat/4/idpl/31024578/dir/mageia_cauldron/com/pyspread-0.4.3-1.mga6.noarch.rpm.html">pyspread v0.4.3</a></td>
     </tr>
     <tr>
       <td style="text-align: center;"><img style=" width:
@@ -155,7 +155,7 @@
       </td>
       <td style="text-align: left;">Slackware</td>
       <td><a
-          href="https://slackbuilds.org/repository/14.1/office/pyspread/">pyspread v0.4.3</a></td>
+          href="https://slackbuilds.org/repository/14.1/office/pyspread/">pyspread v1.0</a></td>
     </tr>
     <tr>
       <td style="vertical-align: top; text-align: center;"><img
@@ -163,7 +163,7 @@
           align="middle"></td>
       <td style="vertical-align: top;">Ubuntu</td>
       <td style="vertical-align: top;"><a
-          href="https://packages.ubuntu.com/wily/python/pyspread">pyspread v0.4.3</a></td>
+          href="http://packages.ubuntu.com/wily/pyspread">pyspread v0.4.3</a></td>
     </tr>
   </tbody>
 </table>
@@ -241,5 +241,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 29. October 2015</span>
+  Last changed: 18. November 2015</span>
 </p>
