Download page updated

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -163,7 +163,7 @@
           align="middle"></td>
       <td style="vertical-align: top;">Ubuntu</td>
       <td style="vertical-align: top;"><a
-          href="http://packages.ubuntu.com/wily/pyspread">pyspread v0.4.3</a></td>
+          href="http://packages.ubuntu.com/xenial/pyspread">pyspread v1.0</a></td>
     </tr>
   </tbody>
 </table>
