Typo fixed on download page

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -186,7 +186,7 @@
   The latest version can be downloaded <a href="http://download.gna.org/pyspread/pyspread-1.0-win32-setup.exe">here</a> 
   (120MB download, <a href="http://download.gna.org/pyspread/pyspread-1.0-win32-setup.exe.sig">gpg sig</a>).
 
-<h2>Manual insatllation</h2>
+<h2>Manual installation</h2>
 
 <p class="one_line_heading">
   If you want to customize a Windows installation or if you require 64 bit then install pyspread manually.
