--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -146,7 +146,7 @@
           src="https://manns.github.io/pyspread/images/mageia-logo-small.png"
           align="middle"></td>
       <td style=" text-align: left;">Mageia</td>
-      <td><a href="http://rpm.pbone.net/index.php3/stat/4/idpl/31024578/dir/mageia_cauldron/com/pyspread-0.4.3-1.mga6.noarch.rpm.html">pyspread v0.4.3</a></td>
+      <td><a href="https://madb.mageia.org/package/show/name/pyspread/release/cauldron">pyspread v1.0</a></td>
     </tr>
     <tr>
       <td style="text-align: center;"><img style=" width:
