Brasilian portugese locale corrected at contributors page

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -46,7 +46,7 @@
 </p>
 
 <ul class="one_line_heading">
-  <li style="color: rgb(255, 0, 0);">Brazilian Portuguese (pt): 488 /
+  <li style="color: rgb(255, 0, 0);">Brazilian Portuguese (pt_BR): 488 /
     549 translated by Enrico Nicoletto</li>
   <li style="color: rgb(0, 153, 0);">Danish (da): 549 / 549
     translated by Joe Hansen</li>
