pyrsvg link fixed, Debian version updated

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -65,7 +65,7 @@
   <li><a href="http://jedi.jedidjah.ch">jedi</a>
     (&gt;=0.8.0, for tab completion and context help in the
     entry line)</li>
-  <li> <a href="http://cairographics.org/pyrsvg/">pyrsvg</a>
+  <li> <a href="http://cairographics.org/download/">pyrsvg</a>
     (&gt;=2.32, for displaying SVG files in cells)</li>
   <li><a href="http://matplotlib.org/basemap/">basemap</a>
     (&gt;=1.0.7, for the weather example pys file)<br>
@@ -138,7 +138,7 @@
           align="middle"></td>
       <td style="text-align: left;">Debian</td>
       <td><a
-          href="https://packages.debian.org/de/sid/pyspread">pyspread v1.0.1</a></td>
+          href="https://packages.debian.org/de/sid/pyspread">pyspread v1.0.2</a></td>
     </tr>
     <tr>
       <td style="text-align: center;"><img style=" width:
@@ -241,5 +241,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 16. February 2016</span>
+  Last changed: 20. March 2016</span>
 </p>
