--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -48,13 +48,14 @@
 
 <ul class="one_line_heading">
   <li>CSV import and export</li>
-  <li>XLS import and export, XLSX import*</li>
-  <li>SVG import*</li>
   <li>PDF and SVG export</li>
+  <li>SVG import*</li>
+  <li>XLS import and export, XLSX import*</li>
   <li>Charts for visualizing data</li>
   <li>Python code in cells and in macros</li>
   <li>Python objects as cell results</li>
   <li>Code completion*</li>
+  <li>GIT-able pysu save file format</li>
   <li>GPG based save file signatures that prevent foreign code execution*</li>
   <li>Access to all Python modules from within cells. These
     modules allow for example matrix operations via <a
@@ -131,5 +132,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 24. January 2016</span>
+  Last changed: 23. April 2016</span>
 </p>
