--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -138,7 +138,7 @@
           align="middle"></td>
       <td style="text-align: left;">Debian</td>
       <td><a
-          href="https://packages.debian.org/de/sid/pyspread">pyspread v1.0.2</a></td>
+          href="https://packages.debian.org/de/sid/pyspread">pyspread v1.0.3</a></td>
     </tr>
     <tr>
       <td style="text-align: center;"><img style=" width:
@@ -163,7 +163,7 @@
           align="middle"></td>
       <td style="vertical-align: top;">Ubuntu</td>
       <td style="vertical-align: top;"><a
-          href="http://packages.ubuntu.com/xenial/pyspread">pyspread v1.0.1</a></td>
+          href="http://packages.ubuntu.com/yakkety/pyspread">pyspread v1.0.3</a></td>
     </tr>
   </tbody>
 </table>
