Translation contributions updated

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -46,8 +46,8 @@
 </p>
 
 <ul class="one_line_heading">
-  <li style="color: rgb(255, 0, 0);">Brazilian Portuguese (pt_BR): 488 /
-    549 translated by Enrico Nicoletto</li>
+  <li style="color: rgb(0, 153, 0);">Brazilian Portuguese (pt_BR): 549 /
+    549 translated by Enrico Nicoletto and Rafael Fontenelle</li>
   <li style="color: rgb(0, 153, 0);">Danish (da): 549 / 549
     translated by Joe Hansen</li>
   <li style="color: rgb(255, 0, 0);">Dutch (nl): 101 / 549
@@ -237,5 +237,5 @@ Chart overview:
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 26. January 2016</span>
+  Last changed: 11. May 2016</span>
 </p>
