--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -53,211 +53,8 @@
 </p>
 
 
-<h1>Installation</h1>
-
-
-<h2>Dependencies</h2>
-
-<p class="one_line_heading">
-    Pyspread works on Linux and other GTK platforms as well as on Windows.
-    While there have been reports that pyspread can be used on OS X as well,
-    OS X is currently unsupported.
-    <br>
-    Pyspread requires the following software to be installed:
-</p>
-
-<ul class="one_line_heading">
-  <li> <a href="http://www.python.org/">Python</a>
-    (&gt;=2.7, &lt;3.0) </li>
-  <li> <a href="http://www.numpy.org/">numpy</a>
-    (&gt;=1.1.0) </li>
-  <li> <a href="http://www.wxpython.org/">wxPython</a>
-    (&gt;=2.8.10.1, Unicode version required) </li>
-  <li> <a href="http://matplotlib.org/">matplotlib</a>
-    (&gt;=1.1.1)</li>
-  <li> <a href="http://cairographics.org/pycairo/">pycairo</a>
-    (&gt;=1.8.8)</li>
-</ul>
-
-<p class="one_line_heading">
-  The following optional dependencies improve user experience:
-</p>
-
-<ul class="one_line_heading">
-  <li> <a href="http://code.google.com/p/python-gnupg/">python-gnupg</a>
-    (&gt;=0.3.0, for opening own files without approval) <br>
-  </li>
-  <li> <a href="http://www.python-excel.org/">xlrd</a>
-    (&gt;=0.9.2, for loading Excel files)</li>
-  <li><a href="http://www.python-excel.org/">xlwt</a>
-    (&gt;=0.9.2, for saving Excel files)</li>
-  <li><a href="http://jedi.jedidjah.ch">jedi</a>
-    (&gt;=0.8.0, for tab completion and context help in the
-    entry line)</li>
-  <li> <a href="http://cairographics.org/pyrsvg/">pyrsvg</a>
-    (&gt;=2.32, for displaying SVG files in cells)</li>
-  <li><a href="http://matplotlib.org/basemap/">basemap</a>
-    (&gt;=1.0.7, for the weather example pys file)<br>
-  </li>
-</ul>
-
-
-<h2>Source</h2>
-
-<p class="one_line_heading">
-
-  These instructions are for installing the source tarball
-  <br>
-  <a href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.1.tar.gz#md5=81e02432797cc663acb5473c44b80ccc">pyspread v0.4</a>
-  (<a href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.1.tar.gz.asc">gpg sig</a>).
-  <br> <br>
-  Installation:
-  <br>
-  <ol class="one_line_heading">
-    <li>
-      Ensure that <span style="text-decoration: underline;">all</span>
-      dependencies are installed.
-      <br> <br>
-    </li>
-    <li>
-      Unpack the tarball
-      <br> <br>
-    </li>
-    <li>
-      cd to the extraction directory
-      <br> <br>
-    </li>
-    <li>
-      Type in
-      <br>
-      <tt>python setup.py install</tt>
-    </li>
-  </ol>
-</p>
-
-
-<h2>Linux</h2>
-
-<p class="one_line_heading">
-
-  The following distributions provide pyspread as a package
-  (latest release linked):
-  <br>
-
-</p>
-
-<table class="one_line_heading" style=" text-align: left;"
-       border="0" cellpadding="4" cellspacing="7">
-  <tbody>
-    <tr>
-      <td style="text-align: center;"><img style=" width:
-          24px; height: 24px;" alt="Arch logo"
-          src="http://manns.github.io/pyspread/images/arch-logo-small.png"
-          align="middle"><br>
-      </td>
-      <td style="text-align: left;">Arch</td>
-      <td><a
-          href="https://aur.archlinux.org/packages/pyspread/">pyspread v0.4.1</a><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="text-align: center;"><img style=" width:
-          20px; height: 24px;" alt="Debian logo"
-          src="http://manns.github.io/pyspread/images/debian-logo-small.png"
-          align="middle"></td>
-      <td style="text-align: left;">Debian</td>
-      <td><a
-          href="https://packages.debian.org/de/sid/pyspread">pyspread v0.4.3</a></td>
-    </tr>
-    <tr>
-      <td style="text-align: center;"><img style=" width:
-          23px; height: 24px;" alt="Mageia logo"
-          src="http://manns.github.io/pyspread/images/mageia-logo-small.png"
-          align="middle"></td>
-      <td style=" text-align: left;">Mageia</td>
-      <td><a href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/com/pyspread-0.3.3-3.mga5.x86_64.rpm.html">pyspread v0.3.3</a></td>
-    </tr>
-    <tr>
-      <td style="text-align: center;"><img style=" width:
-          24px; height: 24px;" alt="Slackware logo"
-          src="http://manns.github.io/pyspread/images/slackware-logo-small.png"><br>
-      </td>
-      <td style="text-align: left;">Slackware</td>
-      <td><a
-          href="http://slackbuilds.org/repository/14.1/office/pyspread/">pyspread v0.4.3</a></td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top; text-align: center;"><img
-          style=" width: 24px; height: 24px;" alt="Ubuntu
-          logo" src="http://manns.github.io/pyspread/images/ubuntu-logo-small.png"
-          align="middle"></td>
-      <td style="vertical-align: top;">Ubuntu</td>
-      <td style="vertical-align: top;"><a
-          href="http://packages.ubuntu.com/wily/python/pyspread">pyspread v0.4.3</a></td>
-    </tr>
-  </tbody>
-</table>
-
-<p class="one_line_heading">
-
-  For these distributions, the easiest way is to install
-  pyspread from the repositories. The source distribution can
-  also be used e.g. if the packaged version is outdated.
-
-</p>
-
-
-<h2>Windows</h2>
-
-<p class="one_line_heading">
-
-  For Windows, please follow these instructions. In order to make Windows
-  installation easier, links point to sites where both 32 bit and to 64 bit versions are provided.<br>
-  <ol class="one_line_heading">
-    <li>Download and install Python, numpy and matplotlib.
-      You can find 32bit and 64bit packages of WinPython <a
-        href="http://winpython.sourceforge.net/">here</a>.
-      Make sure to get the Python2 version.
-      If WinPython is used then the WinPython control panel is recommended for all installations.<br> <br>
-    </li>
-    <li>Download and install Cairo and pycairo. Working binaries are available <a
-        href="http://www.lfd.uci.edu/%7Egohlke/pythonlibs/">here</a>. Note that Cairo has to be installed by maunually copying it. Make sure to read the installation instructions.<br>
-      <br>
-    </li>
-    <li>Download and install <a
-        href="http://www.wxpython.org/download.php#stable">wxPython 2.8.x</a>.<br>
-      <br>
-    </li>
-    <li>Download and install gnupg (<a
-        href="http://www.gpg4win.org/">Gpg4win</a> supports
-      32&amp;64bit)<br>
-      <br>
-    </li>
-    <li>Download and install <a
-        href="http://pythonhosted.org/python-gnupg/#download">python-gnupg</a>.<br>
-      <br>
-      For&nbsp; <span style="font-weight: bold;">32 bit
-        systems</span>, an exe installer
-      (python-gnupg-0.3.4.win32.exe) is provided on the linked
-      page.<br>
-      <br>
-      For <span style="font-weight: bold;">64 bit systems</span>,
-      the python-gnupg tarball (python-gnupg-0.3.4.tar.gz) has
-      to be extracted (e.g. with 7zip) and installed as
-      follows:<br>
-      <br>
-    </li>
-    <li>Download and install the source distribution of pyspread<br>
-      <br>
-    </li>
-    <li>Start pyspread by double-clicking on the file
-      pyspread.bat in the extraction directory</li>
-  </ol>
-
-</p>
-
-
 <h1>Basic concepts</h1>
+
 
 <h2>Python code as cell language</h2>
 
@@ -296,7 +93,8 @@
     <code>import math</code>
 </p>
 <p class="one_line_heading">
-    are <strong>not</strong> valid.
+    are <strong>not</strong> valid in cells. However, in the macro editor,
+    these statements are possible. Module imports should take place there.
 </p>
 
 <h2>Module import</h2>
@@ -343,7 +141,7 @@
 </p>
 <p class="one_line_heading">
     is <strong style="font-weight: bold;">not</strong> valid in a
-    pyspread cell.
+    pyspread cell. Note that pyspread does also not support +=, -= etc.
 </p>
 <p class="one_line_heading">
     Evaluation order
@@ -375,7 +173,11 @@
         matplotlib figure objects that are displayed as images
     </li>
     <li>
-        Valid SVG figure strings.
+        Valid SVG figure strings are rendered in the cell (static bitmap).
+    </li>
+    <li>
+        VLCPanel (Vlc video panel) objects (pyspread 1.1 or newer) launch a
+        VLC video player instance inside the cell.
     </li>
 </ul>
 
@@ -601,9 +403,9 @@
 </p>
 
 <p class="one_line_heading">
-    Loading and saving Excel files is not feature complete.
-    Data will be lost when saving a document
-    as an xls file and loading it again.
+    Loading and saving Excel and Open document format files is not feature
+    complete. Data will be lost when saving a document
+    as an xls or an ods file and loading it again.
 </p>
 
 
@@ -1817,8 +1619,13 @@
     may very well fail if you changed the cell code manually.
 </p>
 <p class="one_line_heading">
-    In version 0.4, six chart
-    types are supported: Plots, i.e. line charts, bar charts,
+    Note that pyspread cells display all types of matplotlib figures.
+    The chart dialog just provides a convenient user to create and edit common
+    chart types.
+</p>
+<p class="one_line_heading">
+    Since version 0.4, six chart types are supported by the chart dialog:
+    Plots, i.e. line charts, bar charts,
     histograms, box plots, pie charts and annotations. Note
     that pie charts cannot be combined with other chart type
     yet. Please suggest other chart types that you find usable
@@ -1830,6 +1637,29 @@
     not yet an interface dialog for equations. A macro that
     depicts LaTeX equations in a cell is provided in the
     examples directory.
+</p>
+<p class="one_line_heading">
+    <a href="images/chart_dialog.png">
+            <img alt="Chart dialog" src="images/chart_dialog_preview.png"
+                 style="border: 0px solid ; width: 200px; height: 156px;">
+    </a>
+</p>
+<p class="one_line_heading">
+    The chart dialog consists of three parts (from left to right):
+    The Axes panel, the Series panel and a Chart preview panel.
+    The Axes panel allows changing X and Y axes attributes. Other axes types
+    such as Z axis in 3D charts are not supported by the chart dialog.
+</p>
+<p class="one_line_heading">
+    The Series panel allows adding one or more series to the axes. In order to
+    add a new series, click on the + tab at the bottom of the panel. A series
+    is deleted with the x right of the tabs. You can switch between series by
+    clicking on the respective tabs.
+</p>
+<p class="one_line_heading">
+    The figure panel is automatically updated whenever content of the chart
+    dialog is changed. Should it show no chart then something is wrong with
+    the input so that later in the grid, no chart is shown as well.
 </p>
 
 <h3>Help menu</h3>
@@ -2518,5 +2348,5 @@
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
   <br> <br>
-  Last changed: 8. September 2015</span>
+  Last changed: 8. July 2016</span>
 </p>
