Chart dialog subsection titles changed to italics

--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -1652,7 +1652,7 @@
     The Axes panel, the Series panel and a Chart preview panel.
 </p>
 <p class="one_line_heading">
-    <u>Axes panel</u>
+    <i>Axes panel</i>
 </p>
 <p class="one_line_heading">
     The Axes panel allows changing X and Y axes attributes. Other axes types
@@ -1694,7 +1694,7 @@
     format field, which is not available for the Y-axis.
 </p>
 <p class="one_line_heading">
-    <u>Series panel</u>
+    <i>Series panel</i>
 </p>
 <p class="one_line_heading">
     The Series panel allows adding one or more series to the axes. In order to
@@ -1703,7 +1703,7 @@
     clicking on the respective tabs.
 </p>
 <p class="one_line_heading">
-    <u>Figure panel</u>
+    <i>Figure panel</i>
 </p>
 <p class="one_line_heading">
     The figure panel is automatically updated whenever content of the chart
